# llvm2c

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/: dependabot.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
core/: Block.cpp  Block.h  Func.cpp  Func.h  PassType.h  Program.cpp  Program.h
expr/: BinaryExpr.cpp  BinaryExpr.h  Expr.cpp  Expr.h  ExprVisitor.h  UnaryExpr.cpp  UnaryExpr.h
parser/: ProgramParser.cpp  ProgramParser.h  README.md  SimplifyingExprVisitor.cpp  SimplifyingExprVisitor.h  add-sign-casts.cpp  addSignCasts.cpp  allocas.cpp  arrowify.cpp  blocks.cpp  breaks.cpp  cfunc.h  compare.h  computeGlobalVarsOrder.cpp  constval.cpp  constval.h  create-constants.cpp  createAllocas.cpp  createBlocks.cpp  createConstants.cpp  createExpressions.cpp  createFunctionParameters.cpp  createFunctions.cpp  declarations.cpp  delete-redundant-casts.cpp  delete-unused-variables.cpp  deleteRedundantCasts.cpp  deleteUnusedVariables.cpp  determineIncludes.cpp  expressions.cpp  extract-vars.cpp  extractVars.cpp  findDeclaredFunctions.cpp  findMetadataFunctionNames.cpp  findMetadataNames.cpp  findMetadataVariableNames.cpp  fix-main-parameters.cpp  fixMainParameters.cpp  functionParameters.cpp  functions.cpp  (+28 more)
test/: CMakeLists.txt  csmith_testing.py  decomp-fix-csmi.sh  diffs  fix-csmi.sh  run  run.in  run_asm  run_branching  run_globals  run_loops  run_math  run_phi  run_pointer  run_standard_lib  run_statements  run_struct  test_basictypes_infunction.c  test_basictypes_infunction_decompiled.c  test_types_array.c  test_types_array_decompiled.c  test_types_global.c  test_types_global_decompiled.c  tst_types_decompiled.c  types.c  update-expected  ushort.c
test/expected/arrays/: noinit-global_decom.c
test/expected/asm/: basic_add.c  mov.c  multiple_asm.c
test/expected/branching/: if.c  nested_if.c
test/expected/globals/: init_by_func.c  init_by_func_decom.c  init_by_ptr.c  no_init.c  no_init_decom.c  recursive_init.c  s.c  s_decom.c
test/expected/loop/: for.c  for_decom.c  l.c
test/expected/loops/: do_while.c  for_loop.c  inline_inc.c  nested_loops.c  while.c
test/expected/main/: main_int.c  main_void.c
test/expected/math/: add_sub_div_mul.c  and_xor.c  digit_sum.c  fact.c  fact_rec.c  isPrime.c  mod.c  pow_gt.c  shifts.c
test/expected/phi/: phi1.c
test/expected/pointer/: array_of_ptr.c  func_ptr.c  ref_deref.c  ret_array_ptr.c
test/expected/standard_lib/: math.c  stdlib.c  string.c
test/expected/statements/: select.c  switch.c
test/expected/struct/: array_of_structs.c  basic_struct.c  return_struct.c  struct_assignment.c  struct_with_ptrarray.c  struct_with_struct.c  struct_with_structptr.c
test/expected/types_debuginfo/: array-simple-no-init.c  array-simple.c  array.c  array_decom.c  basic_types.c  void.c
test/expected/union/: float_and_unsigned.c
test/globals/: recursive_init.c  recursive_init.c.expect
test/inputs/arrays/: noinit-global.c  noinit-global_decom.ll
test/inputs/globals/: a.ll  a.out  b.ll  init_by_func.c  init_by_func_decom.c  init_by_ptr.c  init_by_ptr.ll  no_init.c  no_init.ll  no_init_decom.c  nooptnone.ll  s.c  s.ll  s_decom.c
test/inputs/loop/: for.c  for.ll  l.c  l.ll
test/inputs/main/: main_int.c  main_void.c
test/inputs/struct/: struct_assignment.c
test/inputs/types_debuginfo/: .everything.c.swp  array-simple-no-init.c  array-simple.c  array.c  cp.c  cp.ll  cp_decom.c  everything.c  everything.ll  everything_decom.c  void.c
test/inputs/types_debuginfo/basic_types/: .int main() {.swp  basic_types_in_function.c  basic_types_in_function.ll  basic_types_in_function_decom.c  basic_types_in_out_function.c  basic_types_in_out_function.ll  basic_types_in_out_function_decom.c  (+12 more)
test/inputs/union/: float_and_unsigned.c
test/loops/: inline_inc.c
test/phi/: phi1.c
test/pointer/: ret_array_ptr.c
test/reduce/: reduce-it.sh
test/standard_lib/: math.c
test/struct/: return_struct.c
type/: Type.cpp  Type.h  TypeHandler.cpp  TypeHandler.h
writer/: CWriter.cpp  CWriter.h  ExprWriter.cpp  ExprWriter.h  Writer.cpp  Writer.h
(+68 files in other folders)
